--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
+/target
+/lib
+/classes
+/checkouts
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
+*.jar
+*.class
 .lein-deps-sum
-.lein-repl-history
-.lein-plugins/
 .lein-failures
+.lein-plugins
+.lein-repl-history
+.project
+.classpath
+/bin
+.settings/*
